--- a/templates/index.html
+++ b/templates/index.html
@@ -4,32 +4,164 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <!-- JavaScript Bundle with Popper -->
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" 
+     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     {%include 'header.html'%}
     <title>Auto Prime</title>
 </head>
+{% load static %}
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Auto Prime</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="{% url 'index' %}">Pagina Principal <span class="sr-only">(Estas aquí)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'vehiculos' %}">Vehiculos</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'about' %}">Quienes Somos</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#">Disabled</a>
-            </li>
-          </ul>
+
+  <header>
+      <nav class="navbar navbar-expand-md navbar-white fixed-top bg-white" aria-label="Twelfth navbar example">
+        <div class="container-fluid">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample10" aria-controls="navbarsExample10" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+  
+          <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample10">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="{% url 'index'%}">LOGO</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'index'%}">INICIO</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'vehiculos'%}">VEHICULOS</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="">SUCURSAL</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{%url 'nosotros'%}">NOSOTROS</a>
+              </li>
+            </ul>
+          </div>
         </div>
       </nav>
+  </header>
+
+  <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
+    <div class="col-md-5 p-lg-5 mx-auto my-5">
+      <h1 class="display-4 fw-normal">Encuentra tu proximo auto</h1>
+      <p class="lead fw-normal">Aprovecha nuestras promociones de autos nuevos con bonos con financiamiento y entrega inmediata.</p>
+      <a class="btn btn-outline-secondary" href="{% url 'vehiculos'%}">Ver autos</a>
+    </div>
+  </div>
+
+  <div class="container-fluid">
+    <div id="carouselExampleIndicators" class="carousel carousel-dark slide" data-bs-ride="true">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="{%static '/carouselinicio/hondacivictyper2021.jpg'%}" class="d-block mx-auto" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5 class="text-white fw-normal fs-3 text-start">Honda Civic type R 2021</h5>
+            <p class="text-white fw-light fs-4 text-start">Compra el tuyo</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="{%static '/carouselinicio/subarubrz.jpg'%}" class="d-block mx-auto" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5 class="text-black fw-normal fs-3 text-start">Subaru BRZ 2021</h5>
+            <p class="text-black fw-light fs-4 text-start">Compra el tuyo</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="{%static '/carouselinicio/toyotacamry2020.jpg'%}" class="d-block mx-auto" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5 class="text-white fw-normal fs-3 text-start">Toyota Camry 2020</h5>
+            <p class="text-white fw-light fs-4 text-start">Compra el tuyo</p>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  </div>
+  
+  <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light"> 
+    <div >
+    <h1 class="text-center fw-light fs-3 ">Oportunidades en autos nuevos</h1>
+  </div>
+    
+    <div class="container mt-5">
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+        <div class="col">
+          <div class="card shadow-sm">
+            <!-- <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg> -->
+            <img class="bd-placeholder-img card-img-top" src="{%static '/tarjetasinicio/asx.png'%}"  alt="..." width="100%" height="180" role="img" aria-label="Placeholder: Thumbnail" focusable="false" >
+            <!-- "{%static '/tarjetasinicio/asx.png'%}" -->
+            <div class="card-body">
+              <p class="card-text text-start"">Un SUV a toda potencia</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <button type="button" class="btn btn-outline-primary">Cotiza aquí</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card shadow-sm">
+            <!-- <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg> -->
+            <img class="bd-placeholder-img card-img-top" src="{%static '/tarjetasinicio/ford.jpg'%}"  alt="..." width="100%" height="180" role="img" aria-label="Placeholder: Thumbnail" focusable="false" >
+            <div class="card-body">
+              <p class="card-text text-start"">Aventurate arriba de un Territory</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <button type="button" class="btn btn-outline-primary">Cotiza aquí</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card shadow-sm">
+            <!-- <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg> -->
+            <img class="bd-placeholder-img card-img-top" src="{%static '/tarjetasinicio/Volvo-1.png'%}"  alt="..." width="100%" height="180" role="img" aria-label="Placeholder: Thumbnail" focusable="false" >
+            <div class="card-body">
+              <p class="card-text text-start">Cotiza el nuevo Volvo</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <button type="button" class="btn btn-outline-primary">Cotiza aquí</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+  </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+      <p class="col-md-4 mb-0 text-muted">&copy; 2022 Company, Inc</p>
+  
+      <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
+        <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
+      </a>
+  
+      <ul class="nav col-md-4 justify-content-end">
+        <li class="nav-item"><a href="{% url 'index'%}" class="nav-link px-2 text-muted">Inicio</a></li>
+        <li class="nav-item"><a href="{% url 'vehiculos'%}" class="nav-link px-2 text-muted">Vehiculos</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Sucursal</a></li>
+        <li class="nav-item"><a href="{%url 'nosotros'%}" class="nav-link px-2 text-muted">Nosotros</a></li>
+      </ul>
+    </footer>
+  </div>
 </body>
 </html>
 
