--- a/templates/Nosotros.html
+++ b/templates/Nosotros.html
@@ -23,19 +23,19 @@
           <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample10">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="{% url 'index'%}">LOGO</a>
+                <a class="nav-link px-4 mt-2 fs-6 fw-normal" href="{% url 'index'%}">INICIO</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'index'%}">INICIO</a>
+                <a class="nav-link px-4 mt-2 fs-6 fw-snormal" href="{% url 'vehiculos'%}">VEHICULOS</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'vehiculos'%}">VEHICULOS</a>
+                <a class="nav-link " href="{% url 'index'%}"><img src="{%static '/logo/logo.png'%}" width="100%" height="40"></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="">SUCURSAL</a>
+                <a class="nav-link px-4 mt-2 fs-6 fw-normal" href="">SUCURSAL</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{%url 'nosotros'%}">NOSOTROS</a>
+                <a class="nav-link px-4 mt-2 fs-6 fw-normal" href="{%url 'nosotros'%}">NOSOTROS</a>
               </li>
             </ul>
           </div>
