--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" 
      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     {%include 'header.html'%}
-    <title>Auto Prime</title>
+    <title>Falcon Motors</title>
 </head>
 {% load static %}
 <body>
@@ -32,7 +32,7 @@
                 <a class="nav-link " href="{% url 'index'%}"><img src="{%static '/logo/logo.png'%}" width="100%" height="40"></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link px-4 mt-2 fs-6 fw-normal" href="">SUCURSAL</a>
+                <a class="nav-link px-4 mt-2 fs-6 fw-normal" href="{% url 'sucursal'%}">SUCURSAL</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link px-4 mt-2 fs-6 fw-normal" href="{%url 'nosotros'%}">NOSOTROS</a>
@@ -148,7 +148,7 @@
 
   <div class="container">
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-      <p class="col-md-4 mb-0 text-muted">&copy; 2022 Company, Inc</p>
+      <p class="col-md-4 mb-0 text-muted">&copy; Falcon Motors, Inc</p>
   
       <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
         <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
@@ -157,7 +157,7 @@
       <ul class="nav col-md-4 justify-content-end">
         <li class="nav-item"><a href="{% url 'index'%}" class="nav-link px-2 text-muted">Inicio</a></li>
         <li class="nav-item"><a href="{% url 'vehiculos'%}" class="nav-link px-2 text-muted">Vehiculos</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Sucursal</a></li>
+        <li class="nav-item"><a href="{% url 'sucursal'%}" class="nav-link px-2 text-muted">Sucursal</a></li>
         <li class="nav-item"><a href="{%url 'nosotros'%}" class="nav-link px-2 text-muted">Nosotros</a></li>
       </ul>
     </footer>
