--- a/templates/index.html
+++ b/templates/index.html
@@ -91,7 +91,55 @@
       </button>
     </div>
   </div>
-  
+  <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light"> 
+    <div >
+      <h1 class="text-center fw-light fs-3 ">Nuestras marcas</h1>
+    </div>
+    <div id="carouselExampleControls" class="carousel carousel-dark slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <div class="images">
+            <a class="" href="#">
+            <img class="bg-white rounded mx-2" src="/static/marcas/Audi.svg"></a>
+            <a href="#">
+            <img class="bg-white rounded mx-2" src="/static/marcas/Citroen.svg"></a>
+            <a href="#">
+            <img class="bg-white rounded mx-2" src="/static/marcas/Fiat.svg"></a>
+            <a href="#">
+            <img class="bg-white rounded mx-2" src="/static/marcas/Ford.svg"></a>
+            <a href="#">
+            <img class="bg-white rounded mx-2" src="/static/marcas/Honda.svg"></a>
+            <a href="#">
+            <img class="bg-white rounded mx-2" src="/static/marcas/Jeep.svg"></a>
+        </div>
+        </div>
+        <div class="carousel-item">
+          <div class="images">
+            <a href="#">
+            <img class="bg-white rounded mx-2" src="/static/marcas/Mitsubishi.svg"></a>
+            <a href="#">
+            <img class="bg-white rounded mx-2" src="/static/marcas/Nissan.svg"></a>
+            <a href="#">
+            <img class="bg-white rounded mx-2" src="/static/marcas/SsangYong.svg"></a>
+            <a href="#">
+            <img class="bg-white rounded mx-2" src="/static/marcas/Subaru.svg"></a>
+            <a href="#">
+            <img class="bg-white rounded mx-2" src="/static/marcas/Volkswagen.svg"></a>
+            <a href="#">
+            <img class="bg-white rounded mx-2" src="/static/marcas/Volvo.svg"></a>
+        </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  </div>
   <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light"> 
     <div >
     <h1 class="text-center fw-light fs-3 ">Oportunidades en autos nuevos</h1>
